src/test/ui/borrowck/borrowck-use-uninitialized-in-cast-trait.ast.stderr
error[E0381]: use of possibly uninitialized variable: `*x`
  --> $DIR/borrowck-use-uninitialized-in-cast-trait.rs:12:13
   |
LL |     let y = x as *const Foo; //[ast]~ ERROR use of possibly uninitialized variable: `*x`
   |             ^ use of possibly uninitialized `*x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
